fix: add gaps between cells

--- a/minesweeper/sass/abstracts/_mixins.scss
+++ b/minesweeper/sass/abstracts/_mixins.scss
@@ -1,6 +1,5 @@
 @import "constants";
 
-
 @mixin media-desktop {
   @media screen and (min-width: $desktop-screen-width) {
     @content;
@@ -16,5 +15,19 @@
 @mixin media-mobile {
   @media screen and (max-width: $mobile-screen-width) {
     @content;
+  }
+}
+
+@mixin animation-scale {
+  @keyframes scaleCell {
+    0% {
+      transform: none;
+    }
+    50% {
+      transform: scale(0.96);
+    }
+    100% {
+      transform: none;
+    }
   }
 }
