--- a/minesweeper/sass/components/_board.scss
+++ b/minesweeper/sass/components/_board.scss
@@ -49,7 +49,8 @@ body {
   -moz-user-select: none;
   -ms-user-select: none;
 
-  transition: background-color 100ms;
+  transform: scale(0.96);
+  transition: all 100ms;
 
   &:hover:not(&_opened, &_mined) {
     background-color: $color-cell-hovered;
@@ -57,6 +58,8 @@ body {
 
   &_opened {
     background-color: $color-secondary-light;
+    animation-name: scaleCell;
+    animation-duration: 190ms;
   }
 
   &_mined {
@@ -116,14 +119,4 @@ body {
   }
 }
 
-@keyframes scaleCell {
-  0% {
-    transform: none;
-  }
-  50% {
-    transform: scale(0.96);
-  }
-  100% {
-    transform: none;
-  }
-}
+@include animation-scale;
